imgui launcher popup success, failed editor rendering

--- a/imgui.ini
+++ b/imgui.ini
@@ -18,3 +18,15 @@ Size=198,71
 Pos=60,60
 Size=339,358
 
+[Window][Game Editor Launcher]
+Pos=121,41
+Size=770,600
+
+[Window][New Project]
+Pos=390,311
+Size=500,98
+
+[Window][Load Project Path]
+Pos=512,321
+Size=256,77
+
