Editor Change ckpt1, character import

--- a/imgui.ini
+++ b/imgui.ini
@@ -19,8 +19,8 @@ Pos=60,60
 Size=339,358
 
 [Window][Game Editor Launcher]
-Pos=221,95
-Size=770,600
+Pos=154,39
+Size=1125,600
 
 [Window][New Project]
 Pos=390,311
@@ -31,7 +31,14 @@ Pos=512,321
 Size=256,77
 
 [Window][Editor (Dockspace)]
-Pos=60,61
-Size=1040,547
-Collapsed=1
+Pos=60,65
+Size=1040,543
+
+[Window][Import Entity]
+Pos=771,476
+Size=377,127
+
+[Window][Select Image File]
+Pos=60,60
+Size=600,400
 
